--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,14 @@
   <!-- Handlebars -->
   <script src="https://cdn.jsdelivr.net/handlebarsjs/4.0.8/handlebars.js"></script>
 
+  <script id="strains-template" type="text/x-handlebars-template">
+    <li>
+      <h3>{{name}}</h3>
+      <p>Genetic Name:{{genetics.name}}</p>
+      <p>ucpc: {{ucpc}}</p>
+      <p>Company: {{seedCompany.name}}</p>
+    </li>
+  </script>
 
 </head>
 <body>
@@ -40,12 +48,22 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <!-- Hero Image Section -->
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>High/Low</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+      <div class="ten column" style="margin-top: 25%">
+        <h4>Hero Image Here</h4>
+        <!-- inserti img element here -->
       </div>
     </div>
+    <!-- Renders Strain List -->
+    <div class="row">
+      <div class="ten column" id="strains" style="margin-top: 25%">
+        <h4>Strains</h4>
+        <!-- append strains handlebars template to empty ul tag -->
+        <ul></ul>
+      </div>
+    </div>
+
   </div>
 
 <!-- End Document
@@ -56,11 +74,11 @@
 <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
 <!-- Models -->
 <script src="./public/scripts/models/apiKey.js"></script>
-<script src="./public/scripts/models/dispModel.js"></script>
+<script src="./public/scripts/models/strains.js"></script>
 <!-- Views -->
-<script src="./public/scripts/views/dispView.js"></script>
+<script src="./public/scripts/views/strainsView.js"></script>
 <!-- Controllers -->
-<script src="./public/scripts/controllers/dispController.js"></script>
+<script src="./public/scripts/controllers/strainsController.js"></script>
 <script src="./public/scripts/controllers/routes.js"></script>
 
 </body>
