Revert "Isaiah mess around"

--- a/public/index.html
+++ b/public/index.html
@@ -89,16 +89,17 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-<script src="vendors/page.js"></script>
+<script src="./vendor/scripts/page.js"></script>
 
 <!-- Models -->
-<script src="scripts/models/strains.js"></script>
-<script src="scripts/models/strainsModel.js"></script>
+<script src="./public/scripts/models/strainsmodel.js"></script>
+<script src="./public/scripts/models/apiKey.js"></script>
+<script src="./public/scripts/models/strains.js"></script>
 <!-- Views -->
-<script src="scripts/views/strainsView.js"></script>
+<script src="./public/scripts/views/strainsView.js"></script>
 <!-- Controllers -->
-<script src="scripts/controllers/strainsController.js"></script>
-<script src="scripts/controllers/routes.js"></script>
+<script src="./public/scripts/controllers/strainsController.js"></script>
+<script src="./public/scripts/controllers/routes.js"></script>
 
 </body>
 </html>
