--- a/public/index.html
+++ b/public/index.html
@@ -49,17 +49,18 @@
         <form>
           <fieldset>
             <ul class="nav">
+              <li><a href='#'>About Us</li></a>
               <label for="username"></label>
-              <input name="username" type="text" placeholder="Username"/>
-              <input name="password" type="password" placeholder="Password"/>
-              <select id="dropdown">
+              <li><input name="username" type="text" placeholder="Username"/></li>
+              <li><input name="password" type="password" placeholder="Password"/></li>
+              <li><select id="dropdown">
                 <option value="rerouter">?????</option>
                 <option value="dispensary">Dispensary</option>
                 <option value="producer">Producer</option>
                 <option value"seeds">Seeds</option>
                 <label id="password" for="password"></label>
-              </select>
-              <button id="submitButton" type="submit">Login</button>
+              </select></li>
+              <li><button id="submitButton" type="submit">Login</button></li>
             </ul>
           </fieldset>
         </form>
@@ -70,12 +71,6 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-    <!-- Hero Image Section -->
-    <div class="ten column" id= "hero" style="margin-top: 25%">
-    <div class="row">
-        <!-- inserti img element here -->
-      </div>
-    </div>
     <!-- Renders Strain List -->
     <div class="row">
       <div class="ten column" id="strains" style="margin-top: 25%">
