--- a/public/index.html
+++ b/public/index.html
@@ -90,16 +90,19 @@
   <div class="row">
     <div class="ten column" id="about" style="margin-top: 25%">
       <h3>High/Low Team</h3>
-      <h4>Isaiah</h4>
-      <h4>Aaron</h4>
-      <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech. Aaron moved to Seattle in 1999. I have spent the last 5 years working as a Office Manager/Paralegal but decided earlier this year I needed a change and enrolled in the 101 course. I loved it and here I am.</p>
+      <ul>
+        <li class="one"><h4>Isaiah</h4></li>
+
+      <li class="two"><h4>Aaron</h4>
+      <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech. Aaron moved to Seattle in 1999. I have spent the last 5 years working as a Office Manager/Paralegal but decided earlier this year I needed a change and enrolled in the 101 course. I loved it and here I am.</p></li>
 
 
-      <h4>Michelle</h4>
+      <li class="three"><h4>Michelle</h4>
       <p>Michelle Scharlock is pursuing the Full Stack Javascript development track at Code Fellows and is having a blast in the 301 class. She is fascinated by single page apps and has a love of all things big data developed during her job promoting SQL Server at Waggener Edstrom.
-        Her life before tech included several formative years after graduating from McGill University  working for nonprofits, including the Ronald McDonald House of Western Washington and Alaska, Metropolitan Opera National Council Northwest, the Seattle Shakespeare Company, the Seattle Opera, and the America’s Music Festivals radio series just to name a few.
-        In her spare time, she can be found hunting for antiques, taking ukulele lessons, and writing plays. Insatiably curious, she is probably raiding your local library right this minute.</p>
-        <h4>Cameron</h4>
+      Her life before tech included several formative years after graduating from McGill University  working for nonprofits, including the Ronald McDonald House of Western Washington and Alaska, Metropolitan Opera National Council Northwest, the Seattle Shakespeare Company, the Seattle Opera, and the America’s Music Festivals radio series just to name a few.
+      In her spare time, she can be found hunting for antiques, taking ukulele lessons, and writing plays. Insatiably curious, she is probably raiding your local library right this minute.</p></li>
+
+      <li class="four"><h4>Cameron</h4></li>
       </div>
     </div>
 
@@ -122,10 +125,12 @@
   <script src="scripts/models/strainsModel.js"></script>
   <!-- Views -->
   <script src="scripts/views/strainsView.js"></script>
-  <script src="scripts/views/aboutView.js"></script>s
+  <script src="scripts/views/aboutView.js"></script>
+  <script src="scripts/views/homeView.js"></script>
   <!-- Controllers -->
   <script src="scripts/controllers/strainsController.js"></script>
   <script src="scripts/controllers/aboutController.js"></script>
+  <script src="scripts/controllers/homeController.js"></script>
   <script src="scripts/controllers/routes.js"></script>
 
 
