--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,11 @@
   </script>
 </head>
 <body>
-  <ul class="mainNAv">
-    <li><a href='/'>Home</li></a>
-    <li><a href='/about'>About Us</li></a>
-  </ul>
   <header class="logo">
+    <ul class="mainNAv">
+      <li><a href='/'>Home</a></li>
+      <li><a href='/about'>About Us</a></li>
+    </ul>
     <h1>High/Low</h1>
     <p>Manifestation planetary transition the dali lama lentils all-encompassing gifting circle talking stick embracing and moving towards, seasonal vipassana backjack. Master cleanse world conflict resolution somatic mind-body, sharing discovering valuable truths clarity essential oils.
     <section>
@@ -75,27 +75,27 @@
 </header>
 
 <!-- Primary Page Layout
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+––––––––––––––––––––––––––––––––––––––– ––––––––––– -->
 <div class="container">
   <!-- Renders Strain List -->
   <div class="row">
-    <div class="ten column" id="strains" style="margin-top: 25%">
+    <div class="ten column" id="weeds" style="margin-top: 5%">
       <h3>Strains</h3>
+      <ul id="strains"></ul>
+      <!-- append strains handlebars template to empty ul tag -->
       <button type="button" id="prev">Previous 10</button>
       <button type="button" id="next">Next 10</button>
-      <!-- append strains handlebars template to empty ul tag -->
-   
     </div>
   </div>
 
 
   <div class="row">
-    <div class="ten column" id="about" style="margin-top: 25%">
+    <div class="ten column" id="about" style="margin-top: 5%">
       <h3>High/Low Team</h3>
       <ul>
         <li class="one"><h4>Isaiah</h4></li>
 
-      <li class="two"><h4>Aaron</h4>
+       <li class="two"><h4>Aaron</h4>
       <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech. Aaron moved to Seattle in 1999. I have spent the last 5 years working as a Office Manager/Paralegal but decided earlier this year I needed a change and enrolled in the 101 course. I loved it and here I am.</p></li>
 
 
@@ -121,11 +121,13 @@
 <!-- Scripts -->
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <!-- Models -->
   <script src="scripts/models/strains.js"></script>
-  <script src="scripts/models/strainsModel.js"></script>
+  <!-- <script src="scripts/models/strainsModel.js"></script> -->
   <!-- Views -->
-  <script src="scripts/views/strainsView.js"></script>
+  <!-- <script src="scripts/views/strainsView.js"></script> -->
   <script src="scripts/views/aboutView.js"></script>
   <script src="scripts/views/homeView.js"></script>
   <!-- Controllers -->
@@ -134,9 +136,7 @@
   <script src="scripts/controllers/homeController.js"></script>
   <script src="scripts/controllers/routes.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-<script src="vendors/page.js"></script>
 
+<script src="vendors/page.js"></script>
 </body>
 </html>
