--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <!-- Basic Page Needs
@@ -33,16 +34,29 @@
 
   <script id="strains-template" type="text/x-handlebars-template">
     {{#each strain}}
-      <ul>
-        <h2>{{name}}</h2>
-        <li>Genetics: {{genetics.names}}</li>
-        <li>Seed Company: {{seedCompany.name}}</li>
-        <li>Seed Company UCPC: {{seedCompany.ucpc}}</li>
-        <li>Strain UPCP: {{ucpc}}</li>
-      </ul>
+    <ul>
+      <h2>{{name}}</h2>
+      <li>Genetics: {{genetics.names}}</li>
+      <li>Seed Company: {{seedCompany.name}}</li>
+      <li>Seed Company UCPC: {{seedCompany.ucpc}}</li>
+      <li>Strain UCPC: {{ucpc}}</li>
+    </ul>
     {{/each}}
   </script>
+  <script id="strainResults" type="text/x-handlbars-template">
+  {{#each strain}}
+  <ul>
+    <h2>{{name}}</h2>
+    <li>Seed Company: {{seedCompany.name}}</li>
+    <li>Seed Company UCPC: {{seedCompany.ucpc}}</li>
+    <li>Strain UCPC: {{ucpc}}</li>
+    <li>Website: {{seedCompany.link}}</li>
+  </ul>
+  {{/each}}
+
+  </script>
 </head>
+
 <body>
   <header class="logo">
     <ul class="mainNAv">
@@ -50,62 +64,79 @@
       <li><a href='/about'>About Us</a></li>
     </ul>
     <h1>High/Low</h1>
-    <p>Manifestation planetary transition the dali lama lentils all-encompassing gifting circle talking stick embracing and moving towards, seasonal vipassana backjack. Master cleanse world conflict resolution somatic mind-body, sharing discovering valuable truths clarity essential oils.
-    <section>
-      <div class="row">
-        <form>
-          <fieldset>
-            <ul class="nav">
-              <label for="username"></label>
-              <li><input name="username" type="text" placeholder="Username"/></li>
-              <li><input name="password" type="password" placeholder="Password"/></li>
-              <!-- <li><select id="dropdown">
+    <p>Manifestation planetary transition the dali lama lentils all-encompassing gifting circle talking stick embracing and moving towards, seasonal vipassana backjack. Master cleanse world conflict resolution somatic mind-body, sharing discovering valuable
+      truths clarity essential oils.
+      <section>
+        <div class="row">
+          <form>
+            <fieldset>
+              <ul class="nav">
+                <label for="username"></label>
+                <li><input name="username" type="text" placeholder="Username" /></li>
+                <li><input name="password" type="password" placeholder="Password" /></li>
+                <!-- <li><select id="dropdown">
               <option value="rerouter">?????</option>
               <option value="dispensary">Dispensary</option>
               <option value="producer">Producer</option>
               <option value="seeds">Seeds</option> -->
-              <label id="password" for="password"></label>
-            </select></li>
-            <li><button id="submitButton" type="submit">Login</button></li>
-          </ul>
-        </fieldset>
-      </form>
-    </div>
-  </section>
-</header>
+                <label id="password" for="password"></label>
+                </select>
+                </li>
+                <li><button id="submitButton" type="submit">Login</button></li>
+              </ul>
+            </fieldset>
+          </form>
+        </div>
+      </section>
+  </header>
 
-<!-- Primary Page Layout
+  <!-- Primary Page Layout
 ––––––––––––––––––––––––––––––––––––––– ––––––––––– -->
-<div class="container">
-  <!-- Renders Strain List -->
-  <div class="row">
-    <div class="ten column" id="weeds" style="margin-top: 5%">
-      <h3>Strains</h3>
-      <ul id="strains"></ul>
-      <!-- append strains handlebars template to empty ul tag -->
-      <button type="button" id="prev">Previous 10</button>
-      <button type="button" id="next">Next 10</button>
+  <div class="container">
+    <!-- Renders Strain List -->
+    <div class="row">
+      <div class="ten column" id="weeds" style="margin-top: 5%">
+        <h3>Strains</h3>
+        <form id="seedForm">
+          <fieldset>
+            <label for="">FIND SEED COMPANY FOR STRAIN</label>
+            <input type="text" name="strainSearch" id="strainSearch" placeholder="Search Strains">
+          </fieldset>
+          <button id="seedSearch" type="submit">Search</button>
+          <ul id="strains"></ul>
+          <!-- append strains handlebars template to empty ul tag -->
+          <button type="button" id="prev">Previous 10</button>
+          <button type="button" id="next">Next 10</button>
+        </form>
+      </div>
     </div>
-  </div>
 
 
-  <div class="row">
-    <div class="ten column" id="about" style="margin-top: 5%">
-      <h3>High/Low Team</h3>
-      <ul>
-        <li class="one"><h4>Isaiah</h4></li>
+    <div class="row">
+      <div class="ten column" id="about" style="margin-top: 5%">
+        <h3>High/Low Team</h3>
+        <ul>
+          <li class="one">
+            <h4>Isaiah</h4></li>
 
-       <li class="two"><h4>Aaron</h4>
-      <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech. Aaron moved to Seattle in 1999. I have spent the last 5 years working as a Office Manager/Paralegal but decided earlier this year I needed a change and enrolled in the 101 course. I loved it and here I am.</p></li>
+          <li class="two">
+            <h4>Aaron</h4>
+            <p>Aaron moved to Seattle from San Francisco in 1999. He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits
+              including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech. Aaron moved
+              to Seattle in 1999. I have spent the last 5 years working as a Office Manager/Paralegal but decided earlier this year I needed a change and enrolled in the 101 course. I loved it and here I am.</p>
+          </li>
 
 
-      <li class="three"><h4>Michelle</h4>
-      <p>Michelle Scharlock is pursuing the Full Stack Javascript development track at Code Fellows and is having a blast in the 301 class. She is fascinated by single page apps and has a love of all things big data developed during her job promoting SQL Server at Waggener Edstrom.
- michelle-aaron-workingonNav
-      Her life before tech included several formative years after graduating from McGill University  working for nonprofits, including the Ronald McDonald House of Western Washington and Alaska, Metropolitan Opera National Council Northwest, the Seattle Shakespeare Company, the Seattle Opera, and the America’s Music Festivals radio series just to name a few.
-      In her spare time, she can be found hunting for antiques, taking ukulele lessons, and writing plays. Insatiably curious, she is probably raiding your local library right this minute.</p></li>
+          <li class="three">
+            <h4>Michelle</h4>
+            <p>Michelle Scharlock is pursuing the Full Stack Javascript development track at Code Fellows and is having a blast in the 301 class. She is fascinated by single page apps and has a love of all things big data developed during her job promoting
+              SQL Server at Waggener Edstrom. michelle-aaron-workingonNav Her life before tech included several formative years after graduating from McGill University working for nonprofits, including the Ronald McDonald House of Western Washington and
+              Alaska, Metropolitan Opera National Council Northwest, the Seattle Shakespeare Company, the Seattle Opera, and the America’s Music Festivals radio series just to name a few. In her spare time, she can be found hunting for antiques, taking
+              ukulele lessons, and writing plays. Insatiably curious, she is probably raiding your local library right this minute.</p>
+          </li>
 
-      <li class="four"><h4>Cameron</h4></li>
+          <li class="four">
+            <h4>Cameron</h4></li>
       </div>
     </div> -->
 
@@ -118,13 +149,15 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
 
-<!-- Scripts -->
+  <!-- Scripts -->
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <!-- Models -->
   <script src="scripts/models/strains.js"></script>
+  <script type="text/javascript" src="scripts/models/seed-search.js">
+  </script>
   <!-- <script src="scripts/models/strainsModel.js"></script> -->
   <!-- Views -->
   <!-- <script src="scripts/views/strainsView.js"></script> -->
@@ -137,6 +170,7 @@
   <script src="scripts/controllers/routes.js"></script>
 
 
-<script src="vendors/page.js"></script>
+  <script src="vendors/page.js"></script>
 </body>
+
 </html>
