--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
 
     <ul>
       <h2>{{name}}</h2>
-      <li>Genetics: {{genetics.names}}</li>
+      <!-- <li>Genetics: {{genetics.names}}</li> -->
       <li>Seed Company: {{seedCompany.name}}</li>
       <li>Seed Company UCPC: {{seedCompany.ucpc}}</li>
-      <li>Strain UCPC: {{ucpc}}</li>
+      <!-- <li>Strain UCPC: {{ucpc}}</li> -->
     </ul>
 
     {{/each}}
@@ -52,14 +52,11 @@
     <h2>{{name}}</h2>
     <li>Seed Company: {{seedCompany.name}}</li>
     <li>Seed Company UCPC: {{seedCompany.ucpc}}</li>
-    <li>Strain UCPC: {{ucpc}}</li>
-    <li>Website: {{seedCompany.link}}</li>
-  </ul>
+    </ul>
+  <button type="button" name="website">Website: {{seedCompany.link}}</button>
   {{/each}}
-
   </script>
 </head>
-
 <body>
   <i class="fa fa-bars" aria-hidden="true"></i>
   <ul class="mainNav">
