Messing with some CSS

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Sarala" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Sarala" rel="stylesheet">
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/module.css">
@@ -61,18 +60,24 @@
 </head>
 
 <body>
-  <i class="fa fa-bars" aria-hidden="true"></i>
-  <ul class="mainNav">
-    <li class="tabs"><a href='/'><i class="fa fa-home" aria-hidden="true"></i></a></li>
-    <li class="tabs"><a href='/about'><i class="fa fa-user-circle-o" aria-hidden="true"></i></a></li>
-  </ul>
-  <header class="logo">
-    <h1>High/Low</h1>
+  <div id="topbar">
+  <i class="fa fa-bars"></i>
 
-    <div class="siteInfo">
-      <p>Manifestation planetary transition the dali lama lentils all-encompassing gifting circle talking stick embracing and moving towards.</p>
-    </div>
-    <section>
+  <ul class="mainNav">
+    <li class="tabs"><a href='/'><i class="fa fa-home fa-3x" aria-hidden="true"></i></a></li>
+    <li><img id="logo" src="images/logo.png"></li>
+    <li class="tabs"><a href='/about'><i class="fa fa-user-circle-o fa-3x" aria-hidden="true"></i></a></li>
+  </ul>
+</div>
+
+  <div class="logo siteInfo">
+    <p>High/Low helps you discover marijuana seed companies by plant strain to help expand your existing dispensary or marijuana product manufacturing business. Using the Cannabis API, High/Low can take your business to a new high with low overhead costs.<p>
+  </div>
+    <header class="logo">
+      <!-- <h1>High/Low</h1> -->
+</div>
+
+<section>
       <div class="row">
         <form>
           <fieldset>
