minor html and css tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,6 @@
     <img src="/images/High_low_white_logo.png">
   </div>
   <header class="logo">
-    <!-- <h1>High/Low</h1> -->
     <section>
       <div class="row">
         <form>
@@ -108,8 +107,8 @@
           </fieldset>
           <ul id="strains"></ul>
           <!-- append strains handlebars template to empty ul tag -->
-          <button type="button" id="prev">Previous 10</button>
-          <button type="button" id="next">Next 10</button>
+          <button type="button" id="prev"><i class="fa fa-arrow-left" aria-hidden="true"></i>  Previous 10</button>
+          <button type="button" id="next">Next 10  <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
         </form>
       </div>
 
@@ -130,7 +129,7 @@
         <li class="six columns">
           <img src="/images/Aaron.png" width="250px"/>
           <h4>Aaron</h4>
-          <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech. Aaron moved to Seattle in 1999. I have spent the last 5 years working as a Office Manager/Paralegal but decided earlier this year I needed a change and enrolled in the 101 course. I loved it and here I am.</p>
+          <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech.</p>
        </li>
 
        <li class="six columns">
