css more updated

--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
     <h3>{{name}}</h2>
     <li>Seed Company: {{seedCompany.name}}</li>
     <li>Seed Company UCPC: {{seedCompany.ucpc}}</li>
+    <li>Learn More: <a href="{{url}}">{{url}}</a></li>
     </ul>
-  <button type="button" name="website">Website: {{seedCompany.link}}</button>
   {{/each}}
   </script>
 </head>
@@ -124,26 +124,27 @@
         <li class="six columns">
           <img src="/images/isaiah.png" width="250px"/>
           <h4>Isaiah</h4>
-          <p>Isaiah is a creature from earth. He identifies as human/other. He enjoys eating food, sleeping from time to time(on a daily basis...sometimes), and living life. Isaiah emerged into this realm roughly 27years ago with the intent to do things. Be aware that when approaching Isaiah, he may seem distracted or spaced out. This is normal, he is just trying to figure out what he will be eating later that day.</p>
+          <p>Isaiah is a creature from earth. He identifies as human/other. He enjoys eating food, sleeping from time to time(on a daily basis...sometimes), and living life. Isaiah emerged into this realm roughly 27years ago with the intent to do things. Be aware that when approaching Isaiah, he may seem distracted or spaced out. This is normal, he is just trying to figure out what he will be eating later that day.no</p>
+        </li>
+        <li class="six columns" id="cam">
+          <img src="/images/cam.png" width="250px"/>
+          <h4>Cameron</h4>
+          <p>Cameron Pam has a background in graphic and UX design. He has experience in architecture, radio, and security networking. He enrolled in Code Fellows to expand his entrepreneurship tools and challenge himself into learning a new skill.</p>
         </li>
 
-        <li class="six columns">
+
+        <li class="six columns" id="aaron">
           <img src="/images/Aaron.png" width="250px"/>
           <h4>Aaron</h4>
           <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech. Aaron moved to Seattle in 1999. I have spent the last 5 years working as a Office Manager/Paralegal but decided earlier this year I needed a change and enrolled in the 101 course. I loved it and here I am.</p>
        </li>
 
-       <li class="six columns">
+       <li class="six columns" id="michelle">
          <img src="/images/michelle.png" width="250px"/>
          <h4>Michelle</h4>
          <p>Michelle Scharlock is pursuing the Full Stack Javascript development track at Code Fellows and is having a blast in the 301 class. She is fascinated by single page apps and has a love of all things big data developed during her job promoting SQL Server at Waggener Edstrom.Her life before tech included several formative years after graduating from McGill University  working for nonprofits, including the Ronald McDonald House of Western Washington and Alaska, Metropolitan Opera National Council Northwest, the Seattle Shakespeare Company, the Seattle Opera, and the America’s Music Festivals radio series just to name a few.In her spare time, she can be found hunting for antiques, taking ukulele lessons, and writing plays. Insatiably curious, she is probably raiding your local library right this minute.</p>
        </li>
 
-       <li class="six columns">
-         <img src="/images/cam.png" width="250px"/>
-         <h4>Cameron</h4>
-         <p>Cameron Pam has a background in graphic and UX design. He has experience in architecture, radio, and security networking. He enrolled in Code Fellows to expand his entrepreneurship tools and challenge himself into learning a new skill.</p>
-       </li>
      </div>
    </div>
 
