clean up and styling changes

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     <h3>{{name}}</h2>
     <li>Seed Company: {{seedCompany.name}}</li>
     <li>Seed Company UCPC: {{seedCompany.ucpc}}</li>
-    <li>Learn More: <a href="{{url}}">{{url}}</a></li>
+    <li>Learn More: <a href="{{url}}">{{url}}</a></li><hr/>
     </ul>
   {{/each}}
   </script>
