--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 <body>
   <i class="fa fa-bars" aria-hidden="true"></i>
   <ul class="mainNav">
-    <li class="tabs"><a href='/'><i class="fa fa-home" aria-hidden="true"></i></a></li>
+    <li class="tabs"><a href='/house'><i class="fa fa-home" aria-hidden="true"></i></a></li>
     <li class="tabs"><a href='/about'><i class="fa fa-user-circle-o" aria-hidden="true"></i></a></li>
   </ul>
   <div id="topLogo">
