--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,8 @@
 
 
 
-  <div class="row">
-    <div class="twelve columns" id="about" style="margin-top: 5%">
+  <div class="row" id="about">
+    <div class="twelve columns" style="margin-top: 5%">
       <h3>High/Low Team</h3>
       <ul class="float">
         <li class="six columns">
@@ -127,25 +127,24 @@
           <h4>Cameron</h4>
           <p>Cameron Pam has a background in graphic and UX design. He has experience in architecture, radio, and security networking. He enrolled in Code Fellows to expand his entrepreneurship tools and challenge himself into learning a new skill.</p>
         </li>
+      </ul>
+    </div>
 
-
+    <div class="twelve columns" style="margin-top: 5%">
+      <ul>
         <li class="six columns" id="aaron">
           <img src="/images/Aaron.png" width="250px"/>
           <h4>Aaron</h4>
           <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech.</p>
        </li>
-
        <li class="six columns" id="michelle">
          <img src="/images/michelle.png" width="250px"/>
          <h4>Michelle</h4>
          <p>Michelle Scharlock is pursuing the Full Stack Javascript development track at Code Fellows and is having a blast in the 301 class. She is fascinated by single page apps and has a love of all things big data developed during her job promoting SQL Server at Waggener Edstrom.Her life before tech included several formative years after graduating from McGill University  working for nonprofits, including the Ronald McDonald House of Western Washington and Alaska, Metropolitan Opera National Council Northwest, the Seattle Shakespeare Company, the Seattle Opera, and the America’s Music Festivals radio series just to name a few.In her spare time, she can be found hunting for antiques, taking ukulele lessons, and writing plays. Insatiably curious, she is probably raiding your local library right this minute.</p>
        </li>
-
-     </div>
+     </ul>
    </div>
-
-
-  </div>
+ </div>
 
   <footer>&copy;High/Low</footer>
 
@@ -164,7 +163,6 @@
   </script>
   <!-- <script src="scripts/models/strainsModel.js"></script> -->
   <!-- Views -->
-  <!-- <script src="scripts/views/strainsView.js"></script> -->
   <script src="scripts/views/aboutView.js"></script>
   <script src="scripts/views/homeView.js"></script>
   <!-- Controllers -->
