--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
   </script>
 </head>
 <body>
-  <i class="fa fa-bars" aria-hidden="true"></i>
+  <!-- <i class="fa fa-bars" aria-hidden="true"></i> -->
   <ul class="mainNav">
     <li class="tabs"><a href='/'><i class="fa fa-home" aria-hidden="true"></i></a></li>
     <li class="tabs"><a href='/about'><i class="fa fa-user-circle-o" aria-hidden="true"></i></a></li>
