--- a/public/index.html
+++ b/public/index.html
@@ -56,15 +56,25 @@
 </head>
 <body>
   <!-- <i class="fa fa-bars" aria-hidden="true"></i> -->
-  <ul class="mainNav">
-    <li class="tabs"><a href='/'><i class="fa fa-home" aria-hidden="true"></i></a></li>
-    <li class="tabs"><a href='/about'><i class="fa fa-user-circle-o" aria-hidden="true"></i></a></li>
-  </ul>
+
   <div id="topLogo">
     <img src="/images/High_low_white_logo.png">
   </div>
+
+  <ul class="mainNav">
+    <li class="tabs"><a href='/strains'><i class="fa fa-home" aria-hidden="true"></i></a></li>
+    <li class="tabs"><a href='/about'><i class="fa fa-user-circle-o" aria-hidden="true"></i></a></li>
+  </ul>
+
   <header class="logo">
-    <section>
+
+    <div id="logoSwap">
+      <div id="topLogo2">
+        <img src="/images/High_low_white_logo.png">
+      </div>
+    </div>
+
+    <section id="loginSwap">
       <div class="row">
         <form>
           <fieldset>
