--- a/public/index.html
+++ b/public/index.html
@@ -56,66 +56,64 @@
   </script>
 </head>
 <body>
-  <i class="fa fa-bars" aria-hidden="true"></i>
-  <ul class="mainNav">
-    <li class="tabs"><a href='/'><i class="fa fa-home" aria-hidden="true"></i></a></li>
-    <li class="tabs"><a href='/about'><i class="fa fa-user-circle-o" aria-hidden="true"></i></a></li>
-  </ul>
+  <!-- <i class="fa fa-bars" aria-hidden="true"></i> -->
   <div id="topLogo">
-    <img src="/images/High_low_white_logo.png">
-  </div>
-  <header class="logo">
-    <section>
-      <div class="row">
-        <form>
-          <fieldset>
-            <ul class="nav">
-              <label for="username"></label>
-              <li class="login"><input name="username" type="text" required placeholder="username"></li>
-              <li class="login"><input name="password" type="text" required placeholder="password"></li>
+      <img src="/images/High_low_white_logo.png">
+    </div>
+    <ul class="mainNav">
+      <li class="tabs"><a href='/strains'><i class="fa fa-home" aria-hidden="true"></i></a></li>
+      <li class="tabs"><a href='/about'><i class="fa fa-user-circle-o" aria-hidden="true"></i></a></li>
+    </ul>
+    <header class="logo">
+      <div id="logoSwap">
+        <div id="topLogo2">
+          <img src="/images/High_low_white_logo.png">
+        </div>
+      </div>
+      <section id="loginSwap">
+        <div class="row">
+          <form>
+            <fieldset>
+              <ul class="nav">
+                <label for="username"></label>
+                <li class="login"><input name="username" type="text" required placeholder="username"></li>
+                <li class="login"><input name="password" type="text" required placeholder="password"></li>
                 <label id="password" for="password"></label>
-                </select>
-                </li>
                 <li><button id="submitButton" type="submit">Login</button></li>
               </ul>
             </fieldset>
           </form>
         </div>
       </section>
-  </header>
-  <div class="siteInfo">
-    <p><em><i class="fa fa-keyboard-o" aria-hidden="true"></i> LOGIN <br>
-      <i class="fa fa-search" aria-hidden="true"></i> SEARCH YOUR STRAIN <br>
-      <i class="fa fa-money" aria-hidden="true"></i>BUY YOUR SEEDS</em></p>
-  </div>
+    </header>
+    <div class="siteInfo">
+      <p><em><i class="fa fa-keyboard-o" aria-hidden="true"></i> LOGIN <br>
+        <i class="fa fa-search" aria-hidden="true"></i> SEARCH YOUR STRAIN <br>
+        <i class="fa fa-money" aria-hidden="true"></i>BUY YOUR SEEDS</em></p>
+    </div>
 
   <!-- Primary Page Layout
 ––––––––––––––––––––––––––––––––––––––– ––––––––––– -->
-
-  <div class="container">
-    <!-- Renders Strain List -->
-    <div class="row">
-      <div class="ten column" id="weeds" style="margin-top: 5%">
-        <h2>Strains</h2>
-        <form id="seedForm">
-          <fieldset>
-            <label for="">FIND SEED COMPANY FOR STRAIN</label>
-            <input type="text" name="strainSearch" id="strainSearch" placeholder="Search Strains">
-            <button id="seedSearch" type="submit">Search</button><hr/>
-          </fieldset>
-          <ul id="strains"></ul>
-          <!-- append strains handlebars template to empty ul tag -->
-          <!-- <button type="button" id="prev"><i class="fa fa-arrow-left" aria-hidden="true"></i>  Previous 10</button>
-          <button type="button" id="next">Next 10  <i class="fa fa-arrow-right" aria-hidden="true"></i></button> -->
-        </form>
-      </div>
-
-    </div>
-
-
-
+<div class="container">
+  <!-- Renders Strain List -->
   <div class="row">
-    <div class="twelve columns" id="about" style="margin-top: 5%">
+    <div class="ten column" id="weeds" style="margin-top: 5%">
+      <h2>Strains</h2>
+      <form id="seedForm">
+        <fieldset>
+          <label for="">FIND SEED COMPANY FOR STRAIN</label>
+          <input type="text" name="strainSearch" id="strainSearch" placeholder="Search Strains">
+          <button id="seedSearch" type="submit">Search</button><hr/>
+        </fieldset>
+        <ul id="strains"></ul>
+        <!-- append strains handlebars template to empty ul tag -->
+        <!-- <button type="button" id="prev"><i class="fa fa-arrow-left" aria-hidden="true"></i>  Previous 10</button>
+        <button type="button" id="next">Next 10  <i class="fa fa-arrow-right" aria-hidden="true"></i></button> -->
+      </form>
+    </div>
+  </div>
+<div class="row" id="about">
+    <div class="twelve columns" style="margin-top: 5%">
       <h3>High/Low Team</h3>
       <ul class="float">
         <li class="six columns">
@@ -128,25 +126,24 @@
           <h4>Cameron</h4>
           <p>Cameron Pam has a background in graphic and UX design. He has experience in architecture, radio, and security networking. He enrolled in Code Fellows to expand his entrepreneurship tools and challenge himself into learning a new skill.</p>
         </li>
-
-
+      </ul>
+    </div>
+    <div class="twelve columns" style="margin-top: 5%">
+      <ul>
         <li class="six columns" id="aaron">
           <img src="/images/Aaron.png" width="250px"/>
           <h4>Aaron</h4>
           <p>Aaron moved to Seattle from San Francisco in 1999.  He worked in retail and bank management for many years but transitioned into a role as an Office Manager and Paralegal in 2012. During that time he assisted on several high profile lawsuits including the Oso Land Slide case in Snohomish County. Earlier this year he decided that he needed a change and a career more inline with the direction Seattle has been moving. This led him to Code Fellows and a future in tech.</p>
-       </li>
-
-       <li class="six columns" id="michelle">
-         <img src="/images/michelle.png" width="250px"/>
-         <h4>Michelle</h4>
-         <p>Michelle Scharlock is pursuing the Full Stack Javascript development track at Code Fellows and is having a blast in the 301 class. She is fascinated by single page apps and has a love of all things big data developed during her job promoting SQL Server at Waggener Edstrom.Her life before tech included several formative years after graduating from McGill University  working for nonprofits, including the Ronald McDonald House of Western Washington and Alaska, Metropolitan Opera National Council Northwest, the Seattle Shakespeare Company, the Seattle Opera, and the America’s Music Festivals radio series just to name a few.In her spare time, she can be found hunting for antiques, taking ukulele lessons, and writing plays. Insatiably curious, she is probably raiding your local library right this minute.</p>
-       </li>
-
-     </div>
-   </div>
-
-
+        </li>
+        <li class="six columns" id="michelle">
+          <img src="/images/michelle.png" width="250px"/>
+          <h4>Michelle</h4>
+          <p>Michelle Scharlock is pursuing the Full Stack Javascript development track at Code Fellows and is having a blast in the 301 class. She is fascinated by single page apps and has a love of all things big data developed during her job promoting SQL Server at Waggener Edstrom.Her life before tech included several formative years after graduating from McGill University  working for nonprofits, including the Ronald McDonald House of Western Washington and Alaska, Metropolitan Opera National Council Northwest, the Seattle Shakespeare Company, the Seattle Opera, and the America’s Music Festivals radio series just to name a few.In her spare time, she can be found hunting for antiques, taking ukulele lessons, and writing plays. Insatiably curious, she is probably raiding your local library right this minute.</p>
+        </li>
+      </ul>
+    </div>
   </div>
+</div>
 
   <footer>&copy;High/Low</footer>
 
